feat: :sparkles: Start
Add blazor

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,23 +27,18 @@
         }
     },
     "forwardPorts": [
-        8080,
         8081
     ],
-    "postCreateCommand": "cd ./SampleApp && dotnet restore",
+    "postCreateCommand": "cd ./ToDoApp && dotnet restore",
     "hostRequirements": {
-        "memory": "4gb",
-        "cpus": 2
+        "memory": "2gb",
+        "cpus": 1
     },
     "remoteEnv": {
         "DOTNET_MULTILEVEL_LOOKUP": "0",
         "TARGET": "net8.0"
     },
     "portsAttributes": {
-        "8080": {
-            "label": "Weather API",
-            "onAutoForward": "notify"
-        },
         "8081": {
             "label": "Weather Front End",
             "onAutoForward": "notify"
