--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,41 +8,19 @@
 				"order": 1
 			},
             "configurations": [
-                "Back End",
                 "Front End"
             ]
         }
     ],
     "configurations": [
         {
-            "name": "Back End",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build backend",
-            "program": "${workspaceFolder}/SampleApp/BackEnd/bin/Debug/net8.0/BackEnd.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/SampleApp/BackEnd",
-            "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
-                "uriFormat": "%s/swagger"
-            },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
-            }
-        },
-        {
             "name": "Front End",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build frontend",
-            "program": "${workspaceFolder}/SampleApp/FrontEnd/bin/Debug/net8.0/FrontEnd.dll",
+            "program": "${workspaceFolder}/ToDoApp/FrontEnd/bin/Debug/net8.0/FrontEnd.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/SampleApp/FrontEnd",
+            "cwd": "${workspaceFolder}/ToDoApp/FrontEnd",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
