--- a/ToDoApp/FrontEnd/appsettings.json
+++ b/ToDoApp/FrontEnd/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BACKEND_URL": "http://localhost:8080"
 }
